--- a/ipca-site/public/tailwind.css
+++ b/ipca-site/public/tailwind.css
@@ -547,6 +547,11 @@ video {
   margin-bottom: 1rem !important;
 }
 
+.mx-auto {
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+
 .mb-16 {
   margin-bottom: 4rem !important;
 }
@@ -567,6 +572,10 @@ video {
   margin-top: 0.5rem !important;
 }
 
+.mb-6 {
+  margin-bottom: 1.5rem !important;
+}
+
 .block {
   display: block !important;
 }
@@ -583,50 +592,6 @@ video {
   height: 100% !important;
 }
 
-.h-\[340px\] {
-  height: 340px !important;
-}
-
-.h-\[540px\] {
-  height: 540px !important;
-}
-
-.h-\[480px\] {
-  height: 480px !important;
-}
-
-.h-\[360px\] {
-  height: 360px !important;
-}
-
-.h-\[400px\] {
-  height: 400px !important;
-}
-
-.h-\[80px\] {
-  height: 80px !important;
-}
-
-.h-\[120px\] {
-  height: 120px !important;
-}
-
-.h-\[150px\] {
-  height: 150px !important;
-}
-
-.max-h-\[480px\] {
-  max-height: 480px !important;
-}
-
-.max-h-\[400px\] {
-  max-height: 400px !important;
-}
-
-.max-h-\[100\%\] {
-  max-height: 100% !important;
-}
-
 .min-h-\[260px\] {
   min-height: 260px !important;
 }
@@ -639,48 +604,12 @@ video {
   min-height: 100% !important;
 }
 
-.min-h-\[400px\] {
-  min-height: 400px !important;
-}
-
-.w-\[340px\] {
-  width: 340px !important;
-}
-
-.w-\[400px\] {
-  width: 400px !important;
-}
-
-.w-\[80px\] {
-  width: 80px !important;
-}
-
-.w-\[120px\] {
-  width: 120px !important;
-}
-
-.w-\[150px\] {
-  width: 150px !important;
-}
-
 .max-w-5xl {
   max-width: 64rem !important;
 }
 
 .max-w-\[100px\] {
   max-width: 100px !important;
-}
-
-.max-w-\[480px\] {
-  max-width: 480px !important;
-}
-
-.max-w-\[360px\] {
-  max-width: 360px !important;
-}
-
-.max-w-\[400px\] {
-  max-width: 400px !important;
 }
 
 .flex-1 {
@@ -707,16 +636,8 @@ video {
   list-style-type: disc !important;
 }
 
-.grid-flow-row {
-  grid-auto-flow: row !important;
-}
-
 .grid-cols-\[100\%\] {
   grid-template-columns: 100% !important;
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
 }
 
 .grid-rows-\[1fr_auto\] {
@@ -731,16 +652,16 @@ video {
   flex-direction: column !important;
 }
 
-.flex-wrap {
-  flex-wrap: wrap !important;
-}
-
 .items-center {
   align-items: center !important;
 }
 
 .justify-end {
   justify-content: flex-end !important;
+}
+
+.justify-center {
+  justify-content: center !important;
 }
 
 .justify-around {
@@ -751,26 +672,51 @@ video {
   justify-items: end !important;
 }
 
-.gap-x-2 {
-  -moz-column-gap: 0.5rem !important;
-       column-gap: 0.5rem !important;
-}
-
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0 !important;
   margin-right: calc(1rem * var(--tw-space-x-reverse)) !important;
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse))) !important;
 }
 
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0 !important;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse)) !important;
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse))) !important;
+.rounded {
+  border-radius: 0.25rem !important;
 }
 
-.bg-slate-700 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity)) !important;
+.rounded-md {
+  border-radius: 0.375rem !important;
+}
+
+.border {
+  border-width: 1px !important;
+}
+
+.border-solid {
+  border-style: solid !important;
+}
+
+.border-yellow-300 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(253 224 71 / var(--tw-border-opacity)) !important;
+}
+
+.border-red-300 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(252 165 165 / var(--tw-border-opacity)) !important;
+}
+
+.border-red-500 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity)) !important;
+}
+
+.border-yellow-500 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(234 179 8 / var(--tw-border-opacity)) !important;
+}
+
+.border-yellow-400 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(250 204 21 / var(--tw-border-opacity)) !important;
 }
 
 .bg-pink-300 {
@@ -778,9 +724,44 @@ video {
   background-color: rgb(249 168 212 / var(--tw-bg-opacity)) !important;
 }
 
-.bg-slate-800 {
+.bg-slate-700 {
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-green-700 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-blue-700 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-blue-400 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-yellow-100 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(254 249 195 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-slate-200 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity)) !important;
 }
 
 .bg-\[url\(\"\/bg5\.svg\"\)\] {
@@ -791,12 +772,12 @@ video {
   background-size: cover !important;
 }
 
-.bg-contain {
-  background-size: contain !important;
-}
-
 .p-4 {
   padding: 1rem !important;
+}
+
+.p-6 {
+  padding: 1.5rem !important;
 }
 
 .px-4 {
@@ -814,12 +795,28 @@ video {
   padding-bottom: 1rem !important;
 }
 
-.pb-\[100px\] {
-  padding-bottom: 100px !important;
+.py-2 {
+  padding-top: 0.5rem !important;
+  padding-bottom: 0.5rem !important;
 }
 
-.pt-4 {
-  padding-top: 1rem !important;
+.px-6 {
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
+}
+
+.px-2 {
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important;
+}
+
+.py-6 {
+  padding-top: 1.5rem !important;
+  padding-bottom: 1.5rem !important;
+}
+
+.pb-\[100px\] {
+  padding-bottom: 100px !important;
 }
 
 .text-left {
@@ -869,8 +866,17 @@ video {
   line-height: 1.25rem !important;
 }
 
+.text-xl {
+  font-size: 1.25rem !important;
+  line-height: 1.75rem !important;
+}
+
 .font-bold {
   font-weight: 700 !important;
+}
+
+.leading-normal {
+  line-height: 1.5 !important;
 }
 
 .tracking-wide {
@@ -906,18 +912,114 @@ video {
   color: rgb(202 138 4 / var(--tw-text-opacity)) !important;
 }
 
+.text-green-600 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(22 163 74 / var(--tw-text-opacity)) !important;
+}
+
+.text-white {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
+.text-slate-700 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(51 65 85 / var(--tw-text-opacity)) !important;
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(59 130 246 / var(--tw-text-opacity)) !important;
+}
+
+.text-yellow-700 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(161 98 7 / var(--tw-text-opacity)) !important;
+}
+
+.text-yellow-800 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(133 77 14 / var(--tw-text-opacity)) !important;
+}
+
+.text-pink-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(236 72 153 / var(--tw-text-opacity)) !important;
+}
+
+.text-green-100 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(220 252 231 / var(--tw-text-opacity)) !important;
+}
+
+.text-yellow-400 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(250 204 21 / var(--tw-text-opacity)) !important;
+}
+
+.text-slate-100 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(241 245 249 / var(--tw-text-opacity)) !important;
+}
+
+.text-yellow-500 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(234 179 8 / var(--tw-text-opacity)) !important;
+}
+
+.underline {
+  text-decoration-line: underline !important;
+}
+
+.hover\:bg-blue-700:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-green-700:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-green-950:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(5 46 22 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-slate-500:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-blue-500:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity)) !important;
+}
+
+.hover\:bg-blue-600:hover {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity)) !important;
+}
+
 @media (min-width: 768px) {
-  .md\:my-0 {
-    margin-top: 0px !important;
-    margin-bottom: 0px !important;
+  .md\:m-auto {
+    margin: auto !important;
+  }
+
+  .md\:m-0 {
+    margin: 0px !important;
   }
 
   .md\:mb-0 {
     margin-bottom: 0px !important;
   }
 
-  .md\:basis-1\/4 {
-    flex-basis: 25% !important;
+  .md\:inline-block {
+    display: inline-block !important;
+  }
+
+  .md\:inline {
+    display: inline !important;
   }
 
   .md\:flex-row {
