--- a/ipca-site/public/tailwind.css
+++ b/ipca-site/public/tailwind.css
@@ -732,6 +732,16 @@ video {
   background-color: rgb(254 249 195 / var(--tw-bg-opacity)) !important;
 }
 
+.bg-slate-950 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(2 6 23 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-zinc-900 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity)) !important;
+}
+
 .p-4 {
   padding: 1rem !important;
 }
@@ -802,6 +812,10 @@ video {
   line-height: 1 !important;
 }
 
+.text-\[68px\] {
+  font-size: 68px !important;
+}
+
 .text-\[72px\] {
   font-size: 72px !important;
 }
@@ -825,12 +839,8 @@ video {
   line-height: 1.75rem !important;
 }
 
-.text-\[70px\] {
-  font-size: 70px !important;
-}
-
-.text-\[68px\] {
-  font-size: 68px !important;
+.text-\[65px\] {
+  font-size: 65px !important;
 }
 
 .font-bold {
@@ -839,6 +849,10 @@ video {
 
 .leading-normal {
   line-height: 1.5 !important;
+}
+
+.leading-none {
+  line-height: 1 !important;
 }
 
 .tracking-wide {
@@ -892,6 +906,11 @@ video {
 .text-yellow-800 {
   --tw-text-opacity: 1 !important;
   color: rgb(133 77 14 / var(--tw-text-opacity)) !important;
+}
+
+.text-zinc-50 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(250 250 250 / var(--tw-text-opacity)) !important;
 }
 
 .underline {
