--- a/ipca-site/public/tailwind.css
+++ b/ipca-site/public/tailwind.css
@@ -553,6 +553,10 @@ video {
   margin-right: auto !important;
 }
 
+.mb-12 {
+  margin-bottom: 3rem !important;
+}
+
 .mb-16 {
   margin-bottom: 4rem !important;
 }
@@ -732,14 +736,9 @@ video {
   background-color: rgb(254 249 195 / var(--tw-bg-opacity)) !important;
 }
 
-.bg-slate-950 {
+.bg-zinc-50 {
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(2 6 23 / var(--tw-bg-opacity)) !important;
-}
-
-.bg-zinc-900 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(250 250 250 / var(--tw-bg-opacity)) !important;
 }
 
 .p-4 {
@@ -812,6 +811,10 @@ video {
   line-height: 1 !important;
 }
 
+.text-\[65px\] {
+  font-size: 65px !important;
+}
+
 .text-\[68px\] {
   font-size: 68px !important;
 }
@@ -822,6 +825,10 @@ video {
 
 .text-\[76px\] {
   font-size: 76px !important;
+}
+
+.text-\[84px\] {
+  font-size: 84px !important;
 }
 
 .text-lg {
@@ -839,20 +846,16 @@ video {
   line-height: 1.75rem !important;
 }
 
-.text-\[65px\] {
-  font-size: 65px !important;
-}
-
 .font-bold {
   font-weight: 700 !important;
 }
 
-.leading-normal {
-  line-height: 1.5 !important;
-}
-
 .leading-none {
   line-height: 1 !important;
+}
+
+.leading-normal {
+  line-height: 1.5 !important;
 }
 
 .tracking-wide {
@@ -861,6 +864,11 @@ video {
 
 .tracking-wider {
   letter-spacing: 0.05em !important;
+}
+
+.text-black {
+  --tw-text-opacity: 1 !important;
+  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
 }
 
 .text-blue-500 {
@@ -876,6 +884,11 @@ video {
 .text-green-800 {
   --tw-text-opacity: 1 !important;
   color: rgb(22 101 52 / var(--tw-text-opacity)) !important;
+}
+
+.text-green-900 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(20 83 45 / var(--tw-text-opacity)) !important;
 }
 
 .text-green-950 {
@@ -901,6 +914,11 @@ video {
 .text-yellow-600 {
   --tw-text-opacity: 1 !important;
   color: rgb(202 138 4 / var(--tw-text-opacity)) !important;
+}
+
+.text-yellow-700 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(161 98 7 / var(--tw-text-opacity)) !important;
 }
 
 .text-yellow-800 {
