Adicionado liturgia de 21 de setembro

--- a/ipbcachoeirinha/public/tailwind.css
+++ b/ipbcachoeirinha/public/tailwind.css
@@ -2974,6 +2974,10 @@ video {
   height:100% !important
 }
 
+.max-h-\[--slide-height\]{
+  max-height:var(--slide-height) !important
+}
+
 .min-h-\[260px\]{
   min-height:260px !important
 }
